--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </html>
 <script>
 let i = 0;
-let text = 'I am a full stack developer with experience in web, desktop, and cross-platform development expereince.';
+let text = 'I am a full stack developer with experience in web, desktop, and cross-platform development.';
 let interval = 65;
 window.onload = typeWriter();
 function typeWriter() {
