--- a/index.html
+++ b/index.html
@@ -15,63 +15,189 @@
         <header>
             <nav>
                 <a id="about_link" href="#about">ABOUT</a>
+                <a href="#skill">SKILLS</a>
                 <a href="#portfolio">PORTFOLIO</a>
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
 
         <div id="about">
-            <p id="title-name">Hi, I'm Reza!</p>
-            <p id="typed-text"></p>
-            <a href="#portfolio">CHECK MY WORKS</a>
+            <img src="https://media.giphy.com/media/TRklv98Fvo0Tu/giphy.gif" width="240" height="135" />
+            <p id="title-name"></p>
+            <p id="about-text"></p>
+            <a href="#skill">CHECK MORE</a>
         </div>
 
+        <div id="skill">
+            <h2>Top Skills</h2>
+            <div class="skill-section">
+                <div>
+                    <img src="resources/csharp.png" />
+                    <p>C#</p>
+                </div>
+
+                <div>
+                    <img src="resources/javascript.png" />
+                    <p>JavaScript</p>
+                </div>
+
+                <div>
+                    <img src="resources/php.png" />
+                    <p>PHP</p>
+                </div>
+
+                <div>
+                    <img src="resources/sql.png" />
+                    <p>MySQL</p>
+                </div>
+
+                <div>
+                    <img src="resources/html.png" />
+                    <p>HTML5/CSS3</p>
+                </div>
+            </div>
+
+            <h2>Other Skills</h2>
+            <div class="skill-section">
+                <div>
+                    <img src="resources/java.png" />
+                    <p>Java</p>
+                </div>
+
+                <div>
+                    <img src="resources/python.png" />
+                    <p>Python</p>
+                </div>
+
+                <div>
+                    <img src="resources/net.png" />
+                    <p>ASP.NET Core</p>
+                </div>
+
+                <div>
+                    <img src="resources/laravel.png" />
+                    <p>Laravel</p>
+                </div>
+
+                <div>
+                    <img src="resources/angular.png" />
+                    <p>Angular</p>
+                </div>
+
+                <div>
+                    <img src="resources/typescript.png" />
+                    <p>Typescript</p>
+                </div>
+
+                <div>
+                    <img src="resources/node.png" />
+                    <p>Node.js</p>
+                </div>
+
+                <div>
+                    <img src="resources/express.png" />
+                    <p>Express JS</p>
+                </div>
+
+                <div>
+                    <img src="resources/mongodb.png" />
+                    <p>MongoDB</p>
+                </div>
+
+                <div>
+                    <img src="resources/git.png" />
+                    <p>Git/Github</p>
+                </div>
+
+                <div>
+                    <img src="resources/linux.png" />
+                    <p>Linux</p>
+                </div>
+            </div>
+        </div>
+
+        <h2>Personal Projects</h2>
         <div id="portfolio">
             <div class="box">
-                <img src="resources/phinanze.png">
-                <p>A desktop application for finance management and budgeting.</p>
+                <img src="resources/phinanze.gif">
+                <h3>Phinanze</h3>
+                <p>Phinanze is a personal finance management application for Windows PC that allows users to 
+                    easily manage personal fiannces and see advanced reports and statistics based on time-periods, filters, and/or 
+                    categories. It also utilizes data encryption and remote databases to prevent data loss. To check more or 
+                    install the latest version of Phinanze app, click the button below. 
+                </p>
                 <a target="_blank" href="https://github.com/rezahdev/phinanze">Check Details</a>
             </div>
             <div class="box">
                 <img src="resources/randsbook.png">
-                <p>A responsive web-based personal library application with community feature.</p>
+                <h3>RandsBook</h3>
+                <p>A responsive web-based personal library application with reading tracker and community features where 
+                    users can engage through posts. The application provides advanced book search feature through open Library API. 
+                    Click the button below to check details or visit www.randsBook.com to check the live version fo the app. 
+                </p>
                 <a target="_blank" href="https://github.com/rezahdev/randsbook">Check Details</a>
             </div>
+
             <div class="box">
-                <img src="resources/mars.png">
-                <p>Desktop compatible Unity 3D FPS survival game.</p>
-                <a target="_blank" href="https://github.com/rezahdev/survivemars">Check Details</a>
-            </div>
-            <div class="box">
-                <img src="resources/cms.png">
-                <p>A web-based content management system for student clubs.</p>
-                <a target="_blank" href="https://github.com/rezahdev/uw_impact_cms">Check Details</a>
-            </div>
-            <div class="box">
-                <img src="resources/uwcfos.png">
-                <p>All-in-one web-based Campus food ordering system with admin, employee, and customer specific features.</p>
+                <img src="resources/cfos2.png">
+                <h3>UWCFOS</h3>
+                <p>A web-based concept campus food ordering and order management application that provides all-in-one functionalities 
+                    including admin features for maangeing the cafes, employees, and menu items, employee features for managing live orders,
+                    and customer features for online ordering. The app also provides real-time order tracking and other advanced features. 
+                </p>
                 <a href="https://github.com/rezahdev/cfos">Check Details</a>
             </div>
+            
+            <div class="box">
+                <img src="resources/cms2.png">
+                <h3>UW Impact CMS</h3>
+                <p>An easy-to-use and practical web-based content management application built as part of a web services project which I started 
+                    during COVID-19 to provide UWinnipeg student clubs with free modern responsive websites to enahnce their online presence and increase
+                    student engagement. UW students clubs can use this app to update all contents on their club websites including event info,
+                     group info, contact info, team info, external message inbox and more.  
+                </p>
+                <a target="_blank" href="https://github.com/rezahdev/uw_impact_cms">Check Details</a>
+            </div>
+            
             <div class="box">
                 <img src="resources/phinAPI.png">
-                <p>REST APIs for supporting device-independent data access by the Phinanze app.</p>
+                <h3>Phinanze API</h3>
+                <p>Phinanze app uses remote databases and rely on this set of APIs for data transfer and communication between the server and the 
+                    client application. 
+                </p>
                 <a href="#" >Check Details</a>
             </div>
             <div class="box">
                 <img src="resources/cms_temp.png">
-                <p>One of the templates provided by the content management system.</p>
+                <h3>UW Impact CMS Template</h3>
+                <p>A sample of one of the dynamic website templates that work with the UW Impact CMS application. These templates provide
+                    responsive design and can be updated instantly through the CMS app.
+                </p>
                 <a target="_blank" href="https://uwimpact.net">Check Details</a>
             </div>
             <div class="box">
                 <img src="resources/ers.png">
-                <p>A simple console-based employee management system built with C.</p>
+                <h3>Employee Records Management Console App</h3>
+                <p>This is a console app for employee records management that I built in 2019 as a hobby project. 
+                    The app is built with C programming language with a focus on good structure and programming principles.</p>
                 <a target="_blank" href="https://github.com/rezahdev/ers">Check Details</a>
+            </div>
+
+            <div class="box">
+                <video autoplay muted>
+                    <source src="resources/survivemars.mp4" type="video/mp4">
+                </video>
+                <h3>SurviveMars FPS Game</h3>
+                <p>I built this FPS 3D survival game for PC as a hobby project utlizing C# and Unity. The game provides a Mars-like
+                    environemnt with alien characters and necessary visual/sounds effects for a practical gameplay. 
+                </p>
+                <a target="_blank" href="https://github.com/rezahdev/survivemars">Check Details</a>
             </div>
         </div>
 
         <div id="contact">
             <p>Contact</p>
-            <form>
+            <form action="#" onsubmit="na()">
                 <input type="text" name="name" placeholder="Full Name">
                 <input type="email" name="email" placeholder="Your Email">
                 <textarea placeholder="Write your message here"></textarea>
@@ -81,29 +207,30 @@
 
         <footer>
             <p>&copy; All Rights Reserved</p>
+            <a href="credits.html">Credits and Acknowledgement</a>
         </footer>
 
-        <div id="popup_box">
-            <p id="popup_title"></p>
-            <p id="popup_description"></p>
-            <img id="popup_demo" src="" />
-            <a id="project_link" href="#"></a>
-            <button onclick="closePopupBox()">Close</button>
-        </div>
     </body>
 </html>
+
 <script>
-let i = 0;
-let text = 'I am a full stack developer with experience in web, desktop, and cross-platform development.';
-let interval = 65;
-window.onload = typeWriter();
-function typeWriter() {
-    if (i < text.length) {
-        document.getElementById("typed-text").textContent += text.charAt(i++);
-        setTimeout(typeWriter, interval);
+    let i = 0;
+    let interval = 45;
+    let text = "Hi, this is Reza!";
+    window.onload = typeWriter();
+    function typeWriter() {
+        if (i < text.length) {
+            document.getElementById("title-name").textContent += text.charAt(i++);
+            setTimeout(typeWriter, interval);
+        } else {
+            document.getElementById("about-text").textContent = "I am a recent Computer Science graduate and a passionate " +
+                                                                "Software Developer with experience in developing " + 
+                                                                "desktop and web applications."
+        }
     }
-}
-document.addEventListener("DOMContentLoaded", () => {
-    about_link.click();
-})
+
+    function na() {
+        event.preventDefault();
+        alert('Sorry, this contact method is currently disabled!');
+    }
 </script>
