Edited prject links

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <p>Phinanze app uses remote databases and rely on this set of APIs for data transfer and communication between the server and the 
                     client application. 
                 </p>
-                <a href="#" >Check Details</a>
+                <a href="https://github.com/rezahdev/Phinanze-API" >Check Details</a>
             </div>
             <div class="box">
                 <img src="resources/cms_temp.png">
@@ -174,7 +174,7 @@
                 <p>A sample of one of the dynamic website templates that work with the UW Impact CMS application. These templates provide
                     responsive design and can be updated instantly through the CMS app.
                 </p>
-                <a target="_blank" href="https://uwimpact.net">Check Details</a>
+                <a target="_blank" href="https://github.com/rezahdev/UW_Impact_CMS/tree/master/templates/template01">Check Details</a>
             </div>
             <div class="box">
                 <img src="resources/ers.png">
