--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="https://media.giphy.com/media/TRklv98Fvo0Tu/giphy.gif" width="240" height="135" />
             <p id="title-name"></p>
             <p id="about-text"></p>
-            <a href="#skill">CHECK MORE</a>
+            <a href="#skill">Portfolio</a>
         </div>
 
         <div id="skill">
@@ -56,65 +56,6 @@
                     <p>HTML5/CSS3</p>
                 </div>
             </div>
-            <!--
-            <h2>Other Skills</h2>
-            <div class="skill-section">
-                <div>
-                    <img src="resources/java.png" />
-                    <p>Java</p>
-                </div>
-
-                <div>
-                    <img src="resources/python.png" />
-                    <p>Python</p>
-                </div>
-
-                <div>
-                    <img src="resources/net.png" />
-                    <p>ASP.NET Core</p>
-                </div>
-
-                <div>
-                    <img src="resources/laravel.png" />
-                    <p>Laravel</p>
-                </div>
-
-                <div>
-                    <img src="resources/angular.png" />
-                    <p>Angular</p>
-                </div>
-
-                <div>
-                    <img src="resources/typescript.png" />
-                    <p>Typescript</p>
-                </div>
-
-                <div>
-                    <img src="resources/node.png" />
-                    <p>Node.js</p>
-                </div>
-
-                <div>
-                    <img src="resources/express.png" />
-                    <p>Express JS</p>
-                </div>
-
-                <div>
-                    <img src="resources/mongodb.png" />
-                    <p>MongoDB</p>
-                </div>
-
-                <div>
-                    <img src="resources/git.png" />
-                    <p>Git/Github</p>
-                </div>
-
-                <div>
-                    <img src="resources/linux.png" />
-                    <p>Linux</p>
-                </div>
-            </div>
-            -->
         </div>
 
         <h2>Personal Projects</h2>
@@ -152,7 +93,7 @@
             <div class="box">
                 <img src="resources/cms2.png">
                 <h3>UW Impact CMS</h3>
-                <p>An easy-to-use and practical web-based content management application built as part of a web services project which I started 
+                <p>An easy-to-use and practical web-based content management application built as part of a web development project which I started 
                     during COVID-19 to provide UWinnipeg student clubs with free modern responsive websites to enahnce their online presence and increase
                     student engagement. UW students clubs can use this app to update all contents on their club websites including event info,
                      group info, contact info, team info, external message inbox and more.  
@@ -161,36 +102,24 @@
             </div>
             
             <div class="box">
-                <img src="resources/phinAPI.png">
-                <h3>Phinanze API</h3>
-                <p>Phinanze app uses remote databases and rely on this set of APIs for data transfer and communication between the server and the 
-                    client application. 
+                <img src="resources/uniclubdataapi.png">
+                <h3>University Club Data API</h3>
+                <p>API for information about various university clubs built with C#, .NET Core. 
                 </p>
                 <a href="https://github.com/rezahdev/Phinanze-API" >Check Details</a>
             </div>
-            <div class="box">
-                <img src="resources/cms_temp.png">
-                <h3>UW Impact CMS Template</h3>
-                <p>A sample of one of the dynamic website templates that work with the UW Impact CMS application. These templates provide
-                    responsive design and can be updated instantly through the CMS app.
-                </p>
-                <a target="_blank" href="https://github.com/rezahdev/UW_Impact_CMS/tree/master/templates/template01">Check Details</a>
-            </div>
+
             <div class="box">
                 <img src="resources/ers.png">
                 <h3>Employee Records Management Console App</h3>
-                <p>This is a console app for employee records management that I built in 2019 as a hobby project. 
-                    The app is built with C programming language with a focus on good structure and programming principles.</p>
+                <p>A simple employee record manangement console app.</p>
                 <a target="_blank" href="https://github.com/rezahdev/ers">Check Details</a>
             </div>
 
             <div class="box">
-                <video autoplay muted>
-                    <source src="resources/survivemars.mp4" type="video/mp4">
-                </video>
-                <h3>SurviveMars FPS Game</h3>
-                <p>I built this FPS 3D survival game for PC as a hobby project utlizing C# and Unity. The game provides a Mars-like
-                    environemnt with alien characters and necessary visual/sounds effects for a practical gameplay. 
+                <img src="resources/unity.png">
+                <h3>Unity 3D FPS Survival Game</h3>
+                <p>3D FPS survival game for PC built with C# and Unity. 
                 </p>
                 <a target="_blank" href="https://github.com/rezahdev/survivemars">Check Details</a>
             </div>
@@ -225,8 +154,7 @@
             setTimeout(typeWriter, interval);
         } else {
             document.getElementById("about-text").textContent = "I am a recent Computer Science graduate and a passionate " +
-                                                                "Software Developer with experience in developing " + 
-                                                                "desktop and web applications."
+                                                                "Software Developer."
         }
     }
 
