--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 </div>
 
                 <div>
+                    <img src="resources/net.png" />
+                    <p>.NET</p>
+                </div>
+
+                <div>
                     <img src="resources/javascript.png" />
                     <p>JavaScript</p>
                 </div>
@@ -48,12 +53,17 @@
 
                 <div>
                     <img src="resources/sql.png" />
-                    <p>MySQL</p>
+                    <p>SQL</p>
                 </div>
 
                 <div>
                     <img src="resources/html.png" />
-                    <p>HTML5/CSS3</p>
+                    <p>HTML/CSS</p>
+                </div>
+
+                <div>
+                    <img src="resources/angular.png" />
+                    <p>Angular</p>
                 </div>
             </div>
         </div>
